--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/PeliculasDB
+spring.datasource.username=postgres
+spring.datasource.password=ycdi12
+
 
